# CS370

./: README.md
CS370_Assign01/: CMakeLists.txt  DonQuixote.cpp  Makefile  submit.properties
CS370_Assign01/demo/: DonQuixoteSolMac
CS370_Assign02/: CMakeLists.txt  Makefile  RollinTrain.cpp  RollinTrain.h  submit.properties  utilfuncs.cpp
CS370_Assign02/demo/: RollinTrainSolMac
CS370_Assign03/: CMakeLists.txt  Limelight.cpp  Makefile  submit.properties  utilfuncs.cpp
CS370_Assign03/demo/: LimelightSolMac
CS370_Assign04/: BaseNode.h  CMakeLists.txt  Makefile  WalkingMan-XPS.cpp  WalkingMan.cpp  player.h  submit.properties  utilfuncs.cpp
CS370_Assign04/demo/: WalkingManSolMac
CS370_Exam01_Fall2022/: CMakeLists.txt  Makefile  exam01.h  exam01_fa22.cpp  examfunc.cpp  submit.properties
CS370_Exam01_Fall2022/demo/: Exam01SolMac
CS370_Exam02_Fall2022/: CMakeLists.txt  Makefile  exam02.h  exam02_fa22.cpp  examfunc.cpp  submit.properties
CS370_Exam02_Fall2022/demo/: Exam02SolMac
CS370_Exam03_Fall2022/: CMakeLists.txt  Makefile  exam03.h  exam03_fa22.cpp  examfunc.cpp  submit.properties
CS370_Exam03_Fall2022/demo/: Exam03SolMac
CS370_Lab00/: CMakeLists.txt  helloOpenGL.cpp
CS370_Lab01/: CMakeLists.txt  basic.frag  basic.vert  basicGeometry.cpp
CS370_Lab02/: CMakeLists.txt  color.vert  shadedHexagon.cpp
CS370_Lab03/: CMakeLists.txt  transHexagon.cpp
CS370_Lab04/: CMakeLists.txt  spinningHexagon.cpp  trans.vert
CS370_Lab05/: CMakeLists.txt  orthoCube.cpp  proj.vert
CS370_Lab06/: CMakeLists.txt  frustumScene.cpp
CS370_Lab07/: CMakeLists.txt  dim.vert  shaderScene.cpp
CS370_Lab08/: CMakeLists.txt  default.vert  fog.frag  fogScene.cpp
CS370_Lab09/: CMakeLists.txt  gouraud.frag  gouraud.vert  gouraudMesh.cpp
CS370_Lab10/: CMakeLists.txt  phong.frag  phong.vert  phongMesh.cpp
CS370_Lab11/: CMakeLists.txt  blendedMesh.cpp  lighting.frag  lighting.vert
CS370_Lab12/: CMakeLists.txt  blenderMonkey.cpp  lighting.frag
CS370_Lab13/: CMakeLists.txt  earthMoon.cpp  texture.frag
CS370_Lab14/: CMakeLists.txt  MatNode.h  TexNode.h  robotGraph.cpp  scene.h
CS370_Lab15/: CMakeLists.txt  debugShadow.frag  phongShadow.frag  phongShadow.vert  shadow.frag  shadow.vert  shadowMesh.cpp
CS370_Lab16/: CMakeLists.txt  mirrorMesh.cpp  texture.frag  texture.vert
CS370_Lab17/: CMakeLists.txt  multiMesh.cpp  multiTex.frag  multiTex.vert
CS370_Lab18/: CMakeLists.txt  bumpMesh.cpp  bumpTex.frag  bumpTex.vert  multiTex.frag  multiTex.vert
CS370_Project/: CMakeLists.txt  CS370_Final_Project_eval.docx  Makefile  house.cpp
CS370_Project/models/: Bowl.blend  CeilingFanLamp.blend  CeilingFanLamp.blend1  Glasses.blend  electric_sockets_italians.blend  electric_sockets_italians.blend1  soda_can.blend  table.blend
common/: objloader.cpp  objloader.h  tangentspace.cpp  tangentspace.h  utils.cpp  utils.h  vgl.h  vmath.h
