cmake_minimum_required(VERSION 3.17)
project(CS370-Fall2022)

add_subdirectory("CS370_Assign01" "CS370_Assign01/bin")
add_subdirectory("CS370_Assign02" "CS370_Assign02/bin")
add_subdirectory("CS370_Assign03" "CS370_Assign03/bin")
add_subdirectory("CS370_Assign04" "CS370_Assign04/bin")
add_subdirectory("CS370_Project" "CS370_Project/bin")
add_subdirectory("CS370_Lab00" "CS370_Lab00/bin")
#add_subdirectory("CS370_Lab00_Solution" "CS370_Lab00_Solution/bin")
add_subdirectory("CS370_Lab01" "CS370_Lab01/bin")
#add_subdirectory("CS370_Lab01_Solution" "CS370_Lab01_Solution/bin")
add_subdirectory("CS370_Lab02" "CS370_Lab02/bin")
#add_subdirectory("CS370_Lab02_Solution" "CS370_Lab02_Solution/bin")
add_subdirectory("CS370_Lab03" "CS370_Lab03/bin")
#add_subdirectory("CS370_Lab03_Solution" "CS370_Lab03_Solution/bin")
add_subdirectory("CS370_Lab04" "CS370_Lab04/bin")
#add_subdirectory("CS370_Lab04_Solution" "CS370_Lab04_Solution/bin")
add_subdirectory("CS370_Lab05" "CS370_Lab05/bin")
#add_subdirectory("CS370_Lab05_Solution" "CS370_Lab05_Solution/bin")
add_subdirectory("CS370_Lab06" "CS370_Lab06/bin")
#add_subdirectory("CS370_Lab06_Solution" "CS370_Lab06_Solution/bin")
add_subdirectory("CS370_Lab07" "CS370_Lab07/bin")
#add_subdirectory("CS370_Lab07_Solution" "CS370_Lab07_Solution/bin")
add_subdirectory("CS370_Lab08" "CS370_Lab08/bin")
#add_subdirectory("CS370_Lab08_Solution" "CS370_Lab08_Solution/bin")
add_subdirectory("CS370_Lab09" "CS370_Lab09/bin")
#add_subdirectory("CS370_Lab09_Solution" "CS370_Lab09_Solution/bin")
add_subdirectory("CS370_Lab10" "CS370_Lab10/bin")
#add_subdirectory("CS370_Lab10_Solution" "CS370_Lab10_Solution/bin")
add_subdirectory("CS370_Lab11" "CS370_Lab11/bin")
#add_subdirectory("CS370_Lab11_Solution" "CS370_Lab11_Solution/bin")
add_subdirectory("CS370_Lab12" "CS370_Lab12/bin")
#add_subdirectory("CS370_Lab12_Solution" "CS370_Lab12_Solution/bin")
add_subdirectory("CS370_Lab13" "CS370_Lab13/bin")
#add_subdirectory("CS370_Lab13_Solution" "CS370_Lab13_Solution/bin")
add_subdirectory("CS370_Lab14" "CS370_Lab14/bin")
#add_subdirectory("CS370_Lab14_Solution" "CS370_Lab14_Solution/bin")
add_subdirectory("CS370_Lab15" "CS370_Lab15/bin")
#add_subdirectory("CS370_Lab15_Solution" "CS370_Lab15_Solution/bin")
add_subdirectory("CS370_Lab16" "CS370_Lab16/bin")
#add_subdirectory("CS370_Lab16_Solution" "CS370_Lab16_Solution/bin")
add_subdirectory("CS370_Lab17" "CS370_Lab17/bin")
#add_subdirectory("CS370_Lab17_Solution" "CS370_Lab17_Solution/bin")
add_subdirectory("CS370_Lab18" "CS370_Lab18/bin")
#add_subdirectory("CS370_Lab18_Solution" "CS370_Lab18_Solution/bin")
add_subdirectory("CS370_Exam01_Fall2022" "CS370_Exam01_Fall2022/bin")
add_subdirectory("CS370_Exam02_Fall2022" "CS370_Exam02_Fall2022/bin")
add_subdirectory("CS370_Exam03_Fall2022" "CS370_Exam03_Fall2022/bin")

